fixed notices spacing

--- a/client/src/Views/Notices/NoticesScreen.css
+++ b/client/src/Views/Notices/NoticesScreen.css
@@ -26,8 +26,8 @@
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
     .events-header {
-        font-size: 35px;
-        top: 5%;
+        font-size: 50px;
+        top: 10%;
     }
 }
 
@@ -42,23 +42,23 @@
 /*!* Medium devices (landscape tablets, 768px and up) *!*/
 @media only screen and (min-width: 768px) {
     .events-header {
-        font-size: 70px;
-        top: 5%;
+        font-size: 100px;
+        top: 10%;
     }
 }
 
 /*!* Large devices (laptops/desktops, 992px and up) *!*/
 @media only screen and (min-width: 992px) {
     .events-header {
-        font-size: 90px;
-        top: 5%;
+        font-size: 130px;
+        top: 10%;
     }
 }
 
 /*!* Extra large devices (large laptops and desktops, 1200px and up) *!*/
 @media only screen and (min-width: 1200px) {
     .events-header {
-        font-size: 120px;
-        top: 5%;
+        font-size: 150px;
+        top: 10%;
     }
 }
